# EPANETMSX

./: .gitignore  .gitmodules  CMakeLists.txt  MSX_Updates.txt  license.txt  readme.md  readme.txt
.github/workflows/: build-and-test.yml
Doc/: AUTHORS  license.txt
EPANETMSX-Manual/: make.bat
EPANETMSX-Manual/docs/: 1_introduction.rst  2_framework.rst  3_programusage.rst  4_inputformat.rst  5_examplesystems.rst  arsenic.msx  back_matter.rst  binary.rst  chloramine.msx  conf.py  epanetmsx.bib  epanetmsx.c  errorcodes.rst  example.inp  example.rpt  example_11.rpt  index.rst  index_latex.rst  monochloramine.msx  reference.rst  template.inp  toolkit.rst  twosources.inp
EPANETMSX-Manual/docs/media/: f.docx  image10.wmf  image11.wmf  image12.emf  image13.wmf  image14.wmf  image15.wmf  image16.wmf  image18.wmf  image19.wmf  image21.emf  image22.wmf  image23.wmf  image24.wmf  image25.wmf  image28.wmf  image29.wmf  image30.wmf  image31.wmf  image32.wmf  image33.wmf  image34.wmf  image35.wmf  image36.wmf  image37.wmf  image38.wmf  image39.wmf  image4.wmf  image40.wmf  image41.wmf  image42.wmf  image43.wmf  image5.wmf  image6.wmf  image7.wmf  image8.wmf  image9.wmf
Examples/: example.msx  example.rpt
Include/: epanet2.h  epanet2.lib  epanetmsx.h  epanetmsx.lib  epanetmsx.pas
Include - Copy/: epanet2.lib  epanetmsx.bas  epanetmsx.h
Include/x64/: epanetmsx.lib
Include/x86/: epanet2.lib
Make/Linux/: Makefile  runepanetmsx.sh
Make/Windows/: Readme.txt  msxdll.cmd  msxexe.cmd
Src/: dispersion.h  epanetmsx.h  hash.c  mathexpr.c  mathexpr.h  msxchem.c  msxcompiler.c  msxdict.h  msxdispersion.c  msxerr.c  msxfile.c  msxfuncs.c  msxfuncs.h  msxinp.c  msxmain.c  msxout.c  msxproj.c  msxqual.c  msxrpt.c  msxtank.c  msxtoolkit.c  msxtypes.h  msxutils.c  msxutils.h  newton.c  newton.h  rk5.c  rk5.h  ros2.c  ros2.h  smatrix.c
Src - Copy/: epanet2.h  epanetmsx.h  epanetmsx.lib  hash.c  mathexpr.c  msxchem.c  msxfile.c  msxmain.c  msxout.c  msxproj.c  msxrpt.c  msxutils.c  msxutils.h  newton.c  newton.h  ros2.h
include/: runvc.bat
run/: CMakeLists.txt  msxmain.c
src/: dispersion.h  msxdispersion.c  smatrix.c  smatrix.h
src/run/: CMakeLists.txt  msxmain.c
src/solver/: CMakeLists.txt  hash.c  mempool.c  msxchem.c  msxcompiler.c  msxdispersion.c  msxout.c  msxproj.c  msxqual.c  msxtoolkit.c  msxtypes.h  smatrix.c  smatrix.h
src/solver/include/: epanetmsx.def
